investigate blinking PtyTest.testExecCat